--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,7 @@
     <!-- barra de navegación-->
     <nav class="navbar navbar-expand-sm">
         <div>
+            <!--boton perfil-->
             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
                 <img class="img-fluid profile" src="img/perfil.png" />
             </button>
@@ -36,8 +37,8 @@
                 <a class="navbar-brand" href="index.html">DRUIDS</a>
             </div>
         </div>
-        <!-- Botones de perfil y carrito de compra -->
-        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+        <!-- Botones de inicio secion y carrito de compra -->
+        <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
             <img class="img-fluid profile" src="img/perfil.png" />
         </button>
         <button type="button" class="btn">
@@ -59,19 +60,17 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="username" class="form-label fs-4">Nombre de usuario</label>
-                            <input type="text" class="form-control fs-5" id="username"
-                                placeholder="Ingresa tu nombre de usuario">
+                    <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
+                        <div class="mb-3 form-group">
+                            <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-inicio-sesion" name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario" >
                         </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label fs-4">Contraseña</label>
-                            <input type="password" class="form-control fs-5" id="password"
-                                placeholder="Ingresa tu contraseña">
+                        <div class="mb-3 form-group">
+                            <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
+                            <input type="password" class="form-control fs-5" id="password-inicio-sesion" name="password-inicio-sesion" placeholder="Ingresa tu contraseña" >
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary fs-4">Iniciar sesion</button>
+                            <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
                             <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
                                 data-bs-target="#registerModal">Registrarse</button>
                         </div>
@@ -95,24 +94,29 @@
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="name" class="form-label fs-4">Nombre de usuario</label>
-                            <input type="text" class="form-control fs-5" id="name"
-                                placeholder="Ingresa tu nombre de usuario">
+                    <form method="get" id="formulario-registro" class="needs-validation">
+                        <div class="mb-3 form-group">
+                            <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-registro" name="usuario-registro" placeholder="Ingresa tu nombre de usuario">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="email-registro" class="form-label fs-4">Email</label>
+                            <input type="email"  class="form-control fs-5" id="email-registro" name="email-registro" placeholder="Ingresa tu email" required>                            </div>
+                        <div class="mb-3 form-group">
+                            <label for="password-registro" class="form-label fs-4">Contraseña</label>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud"><p class="requerimiento">Al menos 8 caracteres</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula"><p class="requerimiento">Al menos una letra mayúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
+                            <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label fs-4">Email</label>
-                            <input type="email" class="form-control fs-5" id="email" placeholder="Ingresa tu email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label fs-4">Contraseña</label>
-                            <input type="password" class="form-control fs-5" id="password"
-                                placeholder="Ingresa tu contraseña">
+                            <label for="password-registro-confirmar" class="form-label fs-4">Confirmar contraseña</label>
+                            <input type="password" class="form-control fs-5" id="password-registro-confirmar" name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary fs-4"
-                                data-bs-dismiss="modal">Registrarse</button>
+                            <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
                         </div>
                     </form>
                 </div>
