--- a/pagoexitoso.html
+++ b/pagoexitoso.html
@@ -1,127 +1,161 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="css/pagoexitoso.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 
-        <title>Pago exitoso</title>
-    </head>
-    <header>
-        <!-- barra de navegación-->
-        <nav class="navbar navbar-expand-sm">
-            <div>
-                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                    <img class="img-fluid profile" src="img/perfil.png" />
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
-                    <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
-                    <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
-                    <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
-                    <li><a class="dropdown-item fs-5" href="listaUsuarios.html">Lista de usuarios</a></li>
-                    <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
-                </ul>
-            </div>
-            <div class="container-fluid">
-                <!-- Título centrado -->
-                <div class="mx-auto">
-                    <a class="navbar-brand" href="index.html">DRUIDS</a>
-                </div>
-            </div>
-            <!-- Botones de perfil y carrito de compra -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/pagoexitoso.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <title>Pago exitoso</title>
+</head>
+<header>
+    <!-- barra de navegación-->
+    <nav class="navbar navbar-expand-sm">
+        <div>
+            <!--boton perfil-->
+            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
                 <img class="img-fluid profile" src="img/perfil.png" />
             </button>
-            <button type="button" class="btn">
-                <a href="carrito.html">
-                    <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
-                </a>
-            </button>
-        </nav>
-        <!-- Modal de inicio de sesión -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
+                <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
+                <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
+                <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
+                <li><a class="dropdown-item fs-5" href="listaUsuarios.html">Lista de usuarios</a></li>
+                <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
+            </ul>
+        </div>
+        <div class="container-fluid">
+            <!-- Título centrado -->
+            <div class="mx-auto">
+                <a class="navbar-brand" href="index.html">DRUIDS</a>
+            </div>
+        </div>
+        <!-- Botones de inicio secion y carrito de compra -->
+        <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+            <img class="img-fluid profile" src="img/perfil.png" />
+        </button>
+        <button type="button" class="btn">
+            <a href="carrito.html">
+                <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
+            </a>
+        </button>
+    </nav>
+    <!-- Modal de inicio de sesión -->
+    <div class="modal" id="myModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title fs-1">Inicio de sesion</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title fs-1">Inicio de sesion</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form>
-                            <div class="mb-3">
-                                <label for="username" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="username" placeholder="Ingresa tu nombre de usuario">
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
-                            </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4">Iniciar sesion</button>
-                                <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
-                                    data-bs-target="#registerModal">Registrarse</button>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
+                        <div class="mb-3 form-group">
+                            <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-inicio-sesion"
+                                name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
+                            <input type="password" class="form-control fs-5" id="password-inicio-sesion"
+                                name="password-inicio-sesion" placeholder="Ingresa tu contraseña">
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
+                            <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
+                                data-bs-target="#registerModal">Registrarse</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
-        <!-- The Register Modal -->
-        <div class="modal" id="registerModal">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title fs-1">Registro</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="name" placeholder="Ingresa tu nombre de usuario">
+    </div>
+    <!-- The Register Modal -->
+    <div class="modal" id="registerModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title fs-1">Registro</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <form method="get" id="formulario-registro" class="needs-validation">
+                        <div class="mb-3 form-group">
+                            <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-registro" name="usuario-registro"
+                                placeholder="Ingresa tu nombre de usuario">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="email-registro" class="form-label fs-4">Email</label>
+                            <input type="email" class="form-control fs-5" id="email-registro" name="email-registro"
+                                placeholder="Ingresa tu email" required>
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="password-registro" class="form-label fs-4">Contraseña</label>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud">
+                                <p class="requerimiento">Al menos 8 caracteres</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label fs-4">Email</label>
-                                <input type="email" class="form-control fs-5" id="email" placeholder="Ingresa tu email">
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula">
+                                <p class="requerimiento">Al menos una letra mayúscula</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula">
+                                <p class="requerimiento">Al menos una letra minúscula</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4" data-bs-dismiss="modal">Registrarse</button>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero">
+                                <p class="requerimiento">Al menos un número</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                        </form>
-                    </div>
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial">
+                                <p class="requerimiento">Al menos un carácter especial</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
+                            </div>
+                            <input type="password" class="form-control fs-5" id="password-registro"
+                                name="password-registro" placeholder="Ingresa tu contraseña">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password-registro-confirmar" class="form-label fs-4">Confirmar
+                                contraseña</label>
+                            <input type="password" class="form-control fs-5" id="password-registro-confirmar"
+                                name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
-    </header>
-    <body>
-        <main>
-            <div class="container contenedor-pagoexitoso mt-5">
-                <div class="card">
+    </div>
+</header>
+
+<body>
+    <main>
+        <div class="container contenedor-pagoexitoso mt-5">
+            <div class="card">
                 <div class="card-body text-center mt-5">
                     <h1>¡Pago Exitoso!</h1>
                     <p class="lead">Tu pago se ha realizado correctamente.</p>
@@ -129,14 +163,22 @@
                     <p>Gracias por tu compra.</p>
                     <a href="index.html" class="btn btn-primary">Volver al Inicio</a>
                 </div>
-                </div>
             </div>
-        </main>
-        
-    </body>
-    <footer class="mt-3 p-5 justify-content-right">
-        <!-- Contenido del pie de página -->
-        <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre sobreNosotros</a>
-        <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
-    </footer>
+        </div>
+    </main>
+
+</body>
+<footer class="mt-3 p-5 justify-content-right">
+    <!-- Contenido del pie de página -->
+    <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre sobreNosotros</a>
+    <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
+</footer>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--jQuery validate-->
+<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<!-- Script -->
+<script src="js/scripts.js"></script>
+<script src="js/validaciones.js"></script>
+
 </html>
