feat: Agregar validaciones de formulario de pago y mejorar experiencia de usuario

--- a/pago.html
+++ b/pago.html
@@ -185,7 +185,7 @@
                 </ul>
                 <form class="card p-2">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Código Promo">
+                        <input type="text" class="form-control" id="codigo-promo" name="codigo-promo" placeholder="Código Promo">
                         <button type="submit" class="btn btn-secondary">Aplicar</button>
                     </div>
                 </form>
@@ -200,6 +200,10 @@
                         <div class="col-sm-6 form-group">
                             <label for="Apellido-pago" class="form-label">Apellido</label>
                             <input type="text" class="form-control" id="Apellido-pago" name="Apellido-pago" placeholder="">
+                        </div>
+                        <div class="col-12 form-group">
+                            <label for="rut" class="form-label">Rut</label>
+                            <input type="text" class="form-control" id="rut" name="rut" placeholder="xxxxxxxx-x">
                         </div>
                         <div class="col-12 form-group">
                             <label for="Email-pago" class="form-label">Email <span
