feat: Agregar botón de ver contraseña en formulario de registro

--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                                 <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
                                 <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
                                 <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
-                                <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
+                                <div class="input-group">
+                                    <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
+                                    <button type="button" id="ver-contrasena">Ver contraseña</button>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="password-registro-confirmar" class="form-label fs-4">Confirmar contraseña</label>
