--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/navbar.css">
         <!-- Fuente de letra -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+        
         <title>Inicio</title>
     </head>
     <header>
@@ -112,7 +114,10 @@
                                 <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
                                 <div class="input-group">
                                     <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
-                                    <button type="button" id="ver-contrasena">Ver contraseña</button>
+                                    <button type="button" id="ver-contrasena">
+                                        <img src="img/mostrar-pass.svg" alt="Mostrar contraseña" class="icono-mostrar">
+                                        <img src="img/ocultar-pass.svg" alt="Ocultar contraseña" class="icono-ocultar">
+                                    </button>
                                 </div>
                             </div>
                             <div class="mb-3">
